# open-agent-safety-kit

./: .cursorrules  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.claude/: CLAUDE.md
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: DECK.md  GRANT_PROPOSAL.md  IMPACT.md  INTEGRATIONS.md  MILESTONES.md  RULES.md  USE_OF_FUNDS.md
examples/traces/: safe_verified_build.json  unsafe_false_success.json  unsafe_network_write.json  unsafe_secret_and_shell.json  unsafe_web3_no_receipt.json
scripts/: generate_elegant_deck.py  generate_final_deck.py  generate_pptx_deck.py  generate_supporting_materials.py
skills/open-agent-safety-kit/: SKILL.md
src/agent_safety_kit/: __init__.py  agent.py  cli.py  evaluator.py  models.py  report.py  rules.py
supporting-materials/: Open_Agent_Safety_Kit_Grant_Deck_Final.pptx  README.md  deck.html
tests/: test_evaluator.py
